<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryDark"
    tools:context="com.infnet.ads.projetodebloco.Activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/register_screen"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/email_exist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/email_exist"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/username_required"
                    android:inputType="textPersonName"
                    android:lines="@android:integer/config_longAnimTime"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="@android:integer/config_longAnimTime"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/street"
                    android:inputType="textPostalAddress"
                    android:lines="@android:integer/config_longAnimTime"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/ref"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/ref"
                    android:inputType="text"
                    android:lines="@android:integer/config_longAnimTime"
                    android:textSize="16sp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/city"
                        android:inputType="textPostalAddress"
                        android:lines="@android:integer/config_longAnimTime"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/uf"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_weight="2"
                        android:entries="@array/state_array"
                        android:isScrollContainer="true"
                        android:spinnerMode="dropdown" />

                </TableRow>

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/password_required"
                    android:inputType="textPassword"
                    android:lines="@android:integer/config_longAnimTime"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/infoPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_pass"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/create"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorPrimaryLight"
                    android:text="@string/create"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/required"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_required"
                    android:textSize="12sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
