<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context="com.infnet.ads.projetodebloco.Activities.LogInActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="280dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/content_description"
                android:src="@drawable/logo_acasadapizzaestufada" />

            <TextView
                android:id="@+id/invalid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/invalid"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/email_log"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="none|textEmailAddress"
                android:lines="@android:integer/config_longAnimTime"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="@android:integer/config_longAnimTime"
                android:textSize="16sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorSecondary"
                android:text="@string/login"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/enter"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/colorSecondary"
                android:text="@string/enter"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/recover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/forgot"
                android:textSize="12sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:text="@string/question"
                android:textSize="12sp"
                android:textAlignment="center" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorSecondary"
        android:text="@string/route_db"/>

</RelativeLayout>