<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainLayoutOp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDB"
    android:orientation="vertical"
    android:weightSum="4">


    <FrameLayout
        android:id="@+id/frameContainer2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/OpBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorAccent"
            android:text="@string/operation_txt"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#482000"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btnInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="insert"
                android:text="@string/insert_txt" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="remove"
                android:text="@string/remove_txt" />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="update"
                android:text="@string/update_txt" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <FrameLayout
            android:id="@+id/frameContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scrollbarAlwaysDrawVerticalTrack="false">

        </FrameLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:onClick="doOperation"
        android:text="@string/confirm_txt"
        android:visibility="visible" />


</LinearLayout>
