<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/colorSecondaryDark"
    tools:context="com.infnet.ads.projetodebloco.Activities.RecoverFirstStepActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/recover_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/recover_screen"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/user_recover"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/user_recover"
                android:inputType="textPersonName"
                android:lines="@android:integer/config_longAnimTime"
                android:textSize="16sp" />

            <Button
                android:id="@+id/send_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryLight"
                android:text="@string/send_password"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/invalid_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="8dp"
                android:text="@string/invalid_user"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:visibility="gone" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
