<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/colorSecondaryDark"
    tools:context="com.infnet.ads.projetodebloco.Activities.FinishedActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:contentPadding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/done_finished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/done_finished"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/infoPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_finished"
                android:textSize="12sp" />

            <Button
                android:id="@+id/back_finished"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryLight"
                android:text="@string/back_finished"
                android:textAllCaps="false" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>